admin/acm/gatekeeper_deny_no_requests.yaml
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresources
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResources
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresources

        violation[{"msg": msg}] {
          container := input_containers[_]
          not has_required_resources(container.resources)
          msg := sprintf("container '%v' is missing required cpu/memory requests or limits", [container.name])
        }

        input_containers[c] {
          c := input.review.object.spec.template.spec.containers[_]
        }

        input_containers[c] {
          c := input.review.object.spec.template.spec.initContainers[_]
        }

        has_required_resources(resources) {
          resources.requests.cpu
          resources.requests.memory
          resources.limits.cpu
          resources.limits.memory
        }
